--- a/supervisord.conf
+++ b/supervisord.conf
@@ -3,7 +3,7 @@ nodaemon=true
 logfile=/dev/stdout
 logfile_maxbytes=0
 pidfile=/tmp/supervisord.pid
-user=root
+user=appuser
 
 [program:fastapi]
 command=uvicorn app.main:app --host 0.0.0.0 --port 8000
@@ -14,9 +14,10 @@ stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
+user=appuser
 
 [program:celery]
-command=celery -A app.celery_app worker --loglevel=info
+command=celery -A app.celery_app worker --loglevel=info --uid=1000
 directory=/app
 autostart=true
 autorestart=true
@@ -24,6 +25,7 @@ stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
+user=appuser
 
 [program:discord]
 command=python discord_bot/bot.py
@@ -34,3 +36,4 @@ stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
+user=appuser
