--- a/supervisord.conf
+++ b/supervisord.conf
@@ -17,7 +17,7 @@ stderr_logfile_maxbytes=0
 user=appuser
 
 [program:celery]
-command=celery -A app.celery_app worker --loglevel=info --uid=1000
+command=celery -A app.celery_app worker --loglevel=info
 directory=/app
 autostart=true
 autorestart=true
@@ -26,6 +26,7 @@ stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 user=appuser
+
 
 [program:discord]
 command=python discord_bot/bot.py
