chore: Getting annoyed here

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,40 +1,16 @@
 [supervisord]
+; Run in foreground so Docker can capture logs
 nodaemon=true
-logfile=/dev/stdout
+; Redirect main supervisord log to Docker stdout
+logfile=/proc/1/fd/1
 logfile_maxbytes=0
-pidfile=/tmp/supervisord.pid
-user=appuser
+childlogdir=/tmp
+loglevel=info
 
-[program:fastapi]
-command=uvicorn app.main:app --host 0.0.0.0 --port 8000
-directory=/app
-autostart=true
+[program:uvicorn]
+; Start the uvicorn server first
+command=uvicorn main:app --host 0.0.0.0 --port 8000
+priority=1
+stdout_logfile=/proc/1/fd/1
+stderr_logfile=/proc/1/fd/2
 autorestart=true
-stdout_logfile=/dev/stdout
-stdout_logfile_maxbytes=0
-stderr_logfile=/dev/stderr
-stderr_logfile_maxbytes=0
-user=appuser
-
-[program:celery]
-command=celery -A app.celery_app worker --loglevel=info
-directory=/app
-autostart=true
-autorestart=true
-stdout_logfile=/dev/stdout
-stdout_logfile_maxbytes=0
-stderr_logfile=/dev/stderr
-stderr_logfile_maxbytes=0
-user=appuser
-
-
-[program:discord]
-command=python discord_bot/bot.py
-directory=/app
-autostart=true
-autorestart=true
-stdout_logfile=/dev/stdout
-stdout_logfile_maxbytes=0
-stderr_logfile=/dev/stderr
-stderr_logfile_maxbytes=0
-user=appuser
