--- a/supervisord.conf
+++ b/supervisord.conf
@@ -6,11 +6,13 @@ logfile=/proc/1/fd/1
 logfile_maxbytes=0
 childlogdir=/tmp
 loglevel=info
+user=root
 
 [program:uvicorn]
 ; Start the uvicorn server first
-command=uvicorn main:app --host 0.0.0.0 --port 8000
+command=uvicorn app.main:app --host 0.0.0.0 --port 8000
 priority=1
 stdout_logfile=/proc/1/fd/1
 stderr_logfile=/proc/1/fd/2
 autorestart=true
+user=appuser
